fix: button gap between text and icon

--- a/src/assets/css/components/button.css
+++ b/src/assets/css/components/button.css
@@ -1,5 +1,5 @@
 .btn {
-  @apply inline-flex cursor-pointer items-center justify-center text-center tracking-wide outline-none gap-2;
+  @apply inline-flex cursor-pointer items-center justify-center text-center tracking-wide outline-none gap-1;
   @apply transition-all duration-200;
   @apply focus:outline-none;
 }
